fixed visual bug on mobile

--- a/styles/members.module.scss
+++ b/styles/members.module.scss
@@ -5,7 +5,7 @@
 
 	.title {
 		margin: 1.5rem 0 3rem 0;
-		font-size: 80px;
+		font-size: 60px;
 		text-decoration: none;
 		-webkit-text-fill-color: transparent;
 		background-clip: text;
@@ -26,3 +26,4 @@
 		width: 100%;
 	}
 }
+
